[package]
name = "simple-fast-tree"
version = "0.1.0"
authors = ["“WisonYe” <wisonye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-fast-tree-macros = {path = "simple-fast-tree-macros"}
simple-fast-tree-traits = {path = "simple-fast-tree-traits"}
