[package]
name = "flatten-tree"
version = "0.1.0"
authors = ["“WisonYe” <wisonye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatten-tree-macros = {path = "flatten-tree-macros"}
flatten-tree-traits = {path = "flatten-tree-traits"}

# [[test]]
# name = "tests"
# path = "tests/test-cases.rs"
